@@ -19,8 +19,8 @@ struct plugin
   const response* (*init)(void);
   const response* (*helo)(str* hostname, str* capabilities);
   const response* (*reset)(void);
-  const response* (*sender)(str*);
-  const response* (*recipient)(str*);
+  const response* (*sender)(str* address, str* params);
+  const response* (*recipient)(str* address, str* params);
   const response* (*data_start)(int fd);
   const response* (*data_block)(const char* bytes, unsigned long len);
   const response* (*message_end)(int fd);
@@ -45,8 +45,8 @@ extern const char* getprotoenv(const char*);
 extern const char UNKNOWN[];
 extern const response* handle_helo(str* host, str* capabilities);
 extern const response* handle_reset(void);
-extern const response* handle_sender(str* sender);
-extern const response* handle_recipient(str* recip);
+extern const response* handle_sender(str* sender, str* params);
+extern const response* handle_recipient(str* recip, str* params);
 extern const response* handle_data_start(void);
 extern void handle_data_bytes(const char* bytes, unsigned len);
 extern const response* handle_message_end(void);
