@@ -235,22 +235,26 @@ static const response* helo(str* hostname, str* capabilities)
   return 0;
 }
 
-static const response* sender(str* address)
+static const response* sender(str* address, str* params)
 {
   if (setup("sender")) {
     lua_pushlstring(L, address->s, address->len);
-    return callit(1);
+    lua_pushlstring(L, params->s, params->len);
+    return callit(2);
   }
   return 0;
+  (void)params;
 }
 
-static const response* recipient(str* address)
+static const response* recipient(str* address, str* params)
 {
   if (setup("recipient")) {
     lua_pushlstring(L, address->s, address->len);
-    return callit(1);
+    lua_pushlstring(L, params->s, params->len);
+    return callit(2);
   }
   return 0;
+  (void)params;
 }
 
 static const response* data_start(int fd)
