@@ -58,7 +58,7 @@ static void get_sender(ibuf* in)
   }
   msg3("sender <", line.s, ">");
   if (response_ok(resp))
-    resp = handle_sender(&line);
+    resp = handle_sender(&line, 0);
 }
 
 static void get_recips(ibuf* in)
@@ -83,7 +83,7 @@ static void get_recips(ibuf* in)
     str_copyb(&tmp, line.s+j, len);
     msg3("recipient <", tmp.s, ">");
     if (response_ok(resp))
-      resp = handle_recipient(&tmp);
+      resp = handle_recipient(&tmp, 0);
     i = j + len;
   }
 }
